<resources>
    <string name="app_name">DMEBIKE Dashboard</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Find Bluetooth Devices</string>
    <string name="button_bt_connect">Connect</string>
    <string name="text_list_of_bt_devices">Available Bluetooth Devices</string>
    <string name="bt_spp_uuid">00001101-0000-1000-8000-00805F9B34FB</string>
    <string name="action_connect">Connect</string>
    <string name="action_settings">Settings</string>
    <string name="action_battery">Battery</string>
    <string name="throttle_label">Throttle</string>
    <string name="phase_current">Phase Current</string>
    <string name="battery_current">Battery Current</string>
    <string name="connecting">Connecting...</string>
    <string name="var_name">Variable Name</string>
    <string name="eeprom_val">EEPROM</string>
    <string name="ram_val">RAM</string>
    <string name="kp">Kp</string>
    <string name="dt">DT</string>
    <string name="kc">Kc</string>
    <string name="kd">Kd</string>
    <string name="ki">Ki</string>
    <string name="ram_commit">Save to RAM</string>
    <string name="eeprom_commit">Save to EEPROM</string>
    <string name="choose_vars">Choose Vars</string>
    <string name="numvars">Number of Vars</string>
    <string name="speed">Data Speed</string>
    <string name="settings_title">Settings</string>
    <string name="btconnect_title">Bluetooth Connections</string>
    <string name="battery_title">Battery</string>
    <string name="action_gauge">Gauge</string>
    <string name="dflt_textview">TextView</string>
    <string name="controller_temp">Controller Temp</string>
    <string name="motor_temp">Motor Temp</string>
    <string name="battery_voltage">Battery Voltage</string>
    <string name="dflt_variablevalue">0.000</string>
    <string name="streamDataText">Stream Data</string>
    <string name="streamDataTextOff">Idle</string>
    <string name="streamDataTextOn">Stream</string>
    <string name="focSwitchText">FOC/Trap</string>
    <string name="focSwitchTextOff">FOC Mode</string>
    <string name="focSwitchTextOn">Trap Mode</string>
    <string name="simulateTextOff">NoSim</string>
    <string name="simulateTextOn">Simulate</string>
    <string-array name="data_speed_vals">
        <item>50 Hz</item>
        <item>100 Hz</item>
        <item>200 Hz</item>
        <item>500 Hz</item>
        <item>1 kHz</item>
        <item>5 kHz</item>
    </string-array>
</resources>
