<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settingsFragments.SettingsFOC"
    android:columnCount="3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/var_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/ram_val"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/eeprom_val"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_data_save_ram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/ram_commit" />

    <Button
        android:id="@+id/btn_data_save_eeprom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/eeprom_commit" />
</GridLayout>